fixed profilepic not showing

--- a/src/functions/profile.css
+++ b/src/functions/profile.css
@@ -23,9 +23,9 @@
 }
 
 #profile-picture {
-  width: 100px;
-  height: 100px;
-  border-radius: 100%;
+  width: 120px;
+  height: 120px;
+  border-radius: 70px;
 }
 
 #button-wrapper {
